[project]
name = "myskills"
version = "0.1.0"
description = "AI-powered GitHub video pipeline skills"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pipeline-contracts",
]

[tool.uv.sources]
pipeline-contracts = { path = "contracts", editable = true }

[dependency-groups]
dev = [
    "jsonschema>=4.0",
]
