[project]
name = "myskills"
version = "0.1.0"
description = "AI-powered GitHub video pipeline skills"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pipeline-contracts",
    "playwright>=1.60.0",
    "edge-tts>=7.2.8",
    "aiosqlite>=0.22.1",
]

[tool.uv.sources]
pipeline-contracts = { path = "contracts", editable = true }
[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.workspace]
members = [
    "langgraph-orchestrator",
]
[dependency-groups]
dev = [
    "jsonschema>=4.0",
]
