[project]
name = "pipeline-contracts"
version = "0.1.0"
description = "Data contracts for pipeline processor communication — shared Pydantic models, Zod schemas, and cross-language enums"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline_contracts*"]
