[project]
name = "media_generation"
version = "0.1.0"
description = "Unified media generation abstraction layer — image, speech, music, video via pluggable providers"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
