[project]
name = "langgraph-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
]
