[project]
name = "langgraph-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]
