[project]
name = "video-pipeline"
version = "0.2.0"
description = "Multi-source video generation pipeline server with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "langchain>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

